# pawsport

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  cloudbuild.yaml  debug_logs.json  default.conf  deploy.ps1  deployment_env.yaml  docker-compose.yml  firestore.indexes.json  firestore.rules  logs.txt  logs_503.txt  logs_503_full.txt  logs_503_full_utf8.txt  logs_503_utf8.txt  logs_utf8.txt  migration-checklist.md  patch_error_codes.py  pyproject.toml  raise_reference.py  run.sh  setup-gcp.sh  start.sh
.github/: dependabot.yml
.github/workflows/: deploy-backend.yml  deploy-ml.yml  setup-cloudflare.yml
ml/: .dockerignore  .gcloudignore  Dockerfile  cloudbuild.yaml  google_cloud_storage.py  main.py  requirements.txt
ml/ai/: detect.py  extract_features.py  pose.py
ml/ai/models/: megadescriptorL384.onnx  yolov8s_cat_dog_bbox.onnx  yolov8sbboxcat640.onnx  yolov8sbboxdog640.onnx  yolov8sposecat640.onnx  yolov8sposedog640.onnx
scripts/gunicorn_managing_uvicorn_workers/: .env.example  Dockerfile  docker-compose.yml
scripts/local_with_uvicorn/: docker-compose.yml
scripts/production_with_nginx/: .env.example  Dockerfile  docker-compose.yml
secrets/: google-service-account.json
src/: .env.example
src/app/: main.py
src/app/admin/: views.py
src/app/api/: __init__.py  csrf_router.py  dependencies.py
src/app/core/: config.py  enums.py  error_codes.py  exception_handlers.py  health.py  schemas.py  security.py  setup.py  type_aliases.py  validators.py
src/app/models/: __init__.py  _rbac_table.py  _rbac_tables.py  admin_permission.py  admin_role.py  admin_user.py  article.py  device_push_token.py  missing_report.py  mobile_user.py  mobile_user_token.py  notification_preference.py  permission.py  pet.py  pet_allergy.py  pet_inventory.py  pet_inventory_image.py  pet_medical_condition.py  pet_medication.py  pet_photo.py  pet_profile_image.py  pet_qr_default.py  pet_qr_preference.py  pet_schedule.py  pet_vaccination_record.py  pet_vaccination_record_attachment.py  push_token.py  rate_limit.py  refresh_session.py  role.py  sighting_report.py  sighting_report_image.py  system_action_log.py  tier.py  user.py  user_linked_account.py  vaccination_record.py  vaccination_record_attachment.py
src/app/schemas/: admin_permission.py  admin_role.py  admin_user.py  article.py  community.py  device_push_token.py  missing_report.py  mobile_user.py  notification_preference.py  pet.py  pet_allergy.py  pet_allergy_search.py  pet_inventory.py  pet_inventory_image.py  pet_medical_condition.py  pet_medication.py  pet_photo.py  pet_profile_image.py  pet_qr_default.py  pet_qr_preference.py  pet_schedule.py  pet_vaccination_record.py  pet_vaccination_record_attachment.py  push_token.py  rate_limit.py  sighting_report.py  sighting_report_image.py  system_action_log.py  tier.py  token.py  upload.py  user.py  user_linked_account.py
src/app/services/: admin_permission_service.py  admin_role_service.py  admin_user_service.py  article_service.py  dashboard_service.py  firestore_service.py  (+19 more)
src/migrations/: env.py
src/scripts/: bootstrap.py  create_default_role.py  create_first_superuser.py  create_first_tier.py  create_tier.py  seed_permissions.py
(+122 files in other folders)
